Refactor : -  오류 부분확인후 메서드 수정했습니다. 객체를 잘 나누니까 수정할때 편하다는 것을 깨달았습니다.